--- a/index.html
+++ b/index.html
@@ -1,37 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Elite Turquia - Candidatura</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>Elite Turquia</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <div class="container">
-        <h1>Elite Turquia</h1>
-
-        <p>
-            Bem-vindo ao sistema oficial de candidatura da Elite Turquia.
-            Aqui você encontrará todas as etapas necessárias para participar
-            do processo seletivo e fazer parte da nossa elite.
-        </p>
-
-        <p>
-            O processo funciona em etapas. Após o envio da candidatura,
-            seus dados serão analisados pela liderança. Apenas candidatos
-            que atenderem aos critérios serão aprovados.
-        </p>
-
-        <p>
-            Este sistema foi criado para manter organização, segurança
-            e evitar invasões ou candidaturas falsas.
-        </p>
-
-        <a href="candidatura.html" class="btn">
-            Iniciar Candidatura
-        </a>
-    </div>
-
+<div class="container">
+<h1>Como funciona a candidatura</h1>
+<p>Este site é o sistema oficial de candidatura da Elite Turquia.</p>
+<p>O processo é dividido em etapas e analisado pela liderança.</p>
+<a class="btn" href="candidatura.html">Continuar</a>
+</div>
 </body>
 </html>
